--- a/faq.html
+++ b/faq.html
@@ -544,6 +544,75 @@
             body#faq-page footer div.footerWidgets div.footerWidget-container:nth-child(odd) {
                 text-align: left;
             }
+            .Contact-Us-Heading {
+                color: #084482;
+                font-family: Open Sans;
+                font-style: normal;
+                font-weight: 400;
+                font-size: 29px;
+                line-height: 33px;
+                text-align: center;
+            }
+            #Name {
+                background: #FFFFFF;
+                border: 1px solid #868686;
+                box-sizing: border-box;
+                position: absolute;
+                width: 1110px;
+                height: 50px;
+                left: 165px;
+                top: 200px;
+            }
+            #email {
+                background: #FFFFFF;
+                border: 1px solid #868686;
+                box-sizing: border-box;
+                position: absolute;
+                width: 1110px;
+                height: 50px;
+                left: 165px;
+                top: 260px;
+            }
+            #Subject {
+                position: absolute;
+                width: 1110px;
+                height: 50px;
+                left: 165px;
+                top: 320px;
+                background: #FFFFFF;
+                border: 1px solid #868686;
+                box-sizing: border-box;
+            }
+            #Message {
+                position: absolute;
+                width: 1110px;
+                height: 297px;
+                left: 165px;
+                top: 380px;
+                background: #FFFFFF;
+                border: 1px solid #868686;
+                box-sizing: border-box;
+            }
+            .submit {
+                position: absolute;
+                left: 165px;
+                height: 57px;
+                width: 1110px;
+                top: 700px;
+                bottom: 1.96%;
+                background: #00AEFF;
+                box-shadow: 0px 4px 6px rgba(50, 50, 93, 0.11), 0px 1px 3px rgba(0, 0, 0, 0.08);
+                border-radius: 4px;
+                font-family: Open Sans;
+                font-style: normal;
+                font-weight: bold;
+                font-size: 29px;
+                line-height: 22px;
+                /* identical to box height */
+                text-align: center;
+                letter-spacing: 0.315px;
+                color: #FFFFFF;
+            }
         }
     </style>
 </head>
