--- a/faq.html
+++ b/faq.html
@@ -573,12 +573,41 @@
                 left: 165px;
                 top: 260px;
             }
+            .Contact-Us-Heading {
+                color: #084482;
+                font-family: Open Sans;
+                font-style: normal;
+                font-weight: 400;
+                font-size: 29px;
+                line-height: 33px;
+                text-align: center;
+            }
+            #Name {
+                background: #FFFFFF;
+                border: 1px solid #868686;
+                box-sizing: border-box;
+                position: absolute;
+                width: 1110px;
+                height: 50px;
+                left: 236px;
+                top: 939px;
+            }
+            #email {
+                background: #FFFFFF;
+                border: 1px solid #868686;
+                box-sizing: border-box;
+                position: absolute;
+                width: 1110px;
+                height: 50px;
+                left: 236px;
+                top: 1015px;
+            }
             #Subject {
                 position: absolute;
                 width: 1110px;
                 height: 50px;
-                left: 165px;
-                top: 320px;
+                left: 236px;
+                top: 1091px;
                 background: #FFFFFF;
                 border: 1px solid #868686;
                 box-sizing: border-box;
@@ -587,18 +616,18 @@
                 position: absolute;
                 width: 1110px;
                 height: 297px;
-                left: 165px;
-                top: 380px;
+                left: 236px;
+                top: 1167px;
                 background: #FFFFFF;
                 border: 1px solid #868686;
                 box-sizing: border-box;
             }
             .submit {
                 position: absolute;
-                left: 165px;
+                left: 236px;
                 height: 57px;
                 width: 1110px;
-                top: 700px;
+                top: 1539px;
                 bottom: 1.96%;
                 background: #00AEFF;
                 box-shadow: 0px 4px 6px rgba(50, 50, 93, 0.11), 0px 1px 3px rgba(0, 0, 0, 0.08);
